<resources>
    <string name="app_name">Battery Manager</string>
    <string name="i_will_take_care_of_your_battery">I will take care of your battery</string>
    <string name="info_title">check your battery state</string>
    <string name="check_state">check state</string>
    <string name="voltage">voltage</string>
    <string name="technology">technology</string>
    <string name="temperature">temperature</string>
    <string name="plug_state">plug state</string>
    <string name="app_usage">App Usage</string>
    <string name="battery_health">battery health</string>
    <string name="notification_state">Notification State</string>

</resources>